--- a/TA1_MITO_TW23-BSITWMA/style.css
+++ b/TA1_MITO_TW23-BSITWMA/style.css
@@ -2,17 +2,65 @@
 
 *{
     font-family: 'Poppins';
+    font-weight: lighter;
 }
 
 .container{
-    width: auto;
+    width: 900px;
     border: 5px solid black;
     padding: 10px;
     margin: 20px;
+    color: black;
+    background-color: #fff;
+    text-align: justify;
+    margin-left: 500px;
 }
 
-.btn{
-   text-align: center;
+.header{
+    text-align: left;
+    padding: 10px;
+    margin: 10px;
+}
+
+.header ul li{
+    list-style: none;
+    text-align: left;
+    margin: 0;
+    padding: 0;
+}
+
+.objective{
+    padding: 40px;
+    margin: 10px;
+}
+
+.academic{
+    padding: 40px;
+    margin: 10px;
+}
+
+.skills{
+    padding: 40px;
+    margin: 10px;
+}
+
+img{
+    float: right;
+    width: 120px;
+    margin-right: 10px;
+    margin-top: 20px;
+    padding: 10px;
+}
+
+.change{
+    width: 900px;
+    border: 5px solid black;
+    padding: 10px;
+    margin: 20px;
+    color: black;
+    background-color: #B5828C;
+    text-align: justify;
+    margin-left: 500px;
 }
 
 .container table{
@@ -20,6 +68,3 @@
     height: 50%;
 }
 
-.container .header img{
-    width: 100px;
-}
